JavaScript the chat page.

--- a/about.html
+++ b/about.html
@@ -1,8 +1,12 @@
         <div class="span4">
 			<h2>About</h2>
 
-          <p>Crypto-Book was created by <a href="http://www.cs.yale.edu/homes/maheswaran/home.html">John Maheswaran</a> in collaboration with <a href="http://www.davidwolinsky.com">Dr David Wolinsky</a> and <a href="http://www.brynosaurus.com">Prof Bryan Ford</a> as part 
-of the <a href="http://dedis.cs.yale.edu/2010/anon/">Dissent project</a> in the computer science department at Yale University.</p> 
+          <p>Crypto-Book was created by <a href="http://www.cs.yale.edu/homes/maheswaran/home.html">John Maheswaran</a> in collaboration with 
+<a href="http://dannyjackowitz.com/">Danny Jackowitz</a>, 
+<a href="http://www.cs.yale.edu/homes/zhai-ennan/">Ennan Zhai</a>, 
+<a href="http://www.davidwolinsky.com/">David Isaac Wolinsky</a>, 
+<a href="http://www.brynosaurus.com/">Bryan Ford</a>
+as part of the <a href="http://dedis.cs.yale.edu/2010/anon/">Dissent project</a> in the computer science department at Yale University.</p> 
 
 		<p>Full source code is available online for the <a href="https://github.com/jyale/crypto-book">encrypted Facebook message sender</a> and for <a href="https://github.com/jyale/blackbox">Crypto-Book Black Box</a>.</p>
          
