--- a/header.html
+++ b/header.html
@@ -6,8 +6,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="http://www.crypto-book.com/index.php">Crypto-Book</a>
-	<a class="brand" href="http://mahan.webfactional.com/index.php">Black Box</a>
+<!--          <a class="brand" href="http://www.crypto-book.com/index.php">Crypto-Book Home Page</a>
+-->
+
+	<a class="brand" href="http://mahan.webfactional.com/cobra2/index.php">DeDiS Bulletin Board</a>
           <div class="nav-collapse collapse">
             <!--
 		<ul class="nav">
