Allow user to create custom groups

--- a/dsa/keygen/pets-server/signin.html
+++ b/dsa/keygen/pets-server/signin.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<form class='crypto-book-signin' action='verify.php'>
+		<form class='crypto-book-signin' action='verify.php?groupid=facebook.ids'>
 			<div hidden>
 				<span id='challenge'>challenge</span>
 				<input type='text' id='c0' name='c0'>
