--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
 <!--          <a class="brand" href="http://www.crypto-book.com/index.php">Crypto-Book Home Page</a>
 -->
 
-	<a class="brand" href="http://mahan.webfactional.com/cobra2/index.php">DeDiS Bulletin Board</a>
+	<a class="brand" href="http://cryptobook.ninja/cobra2/index.php">DeDiS Bulletin Board</a>
           <div class="nav-collapse collapse">
             <!--
 		<ul class="nav">
